# SCAR

./: .gitignore  IMPROVEMENTS.md  Makefile  README.md  pyproject.toml
benchmarks/juliet/: README.md
containers/dashboard/: Dockerfile  app.py  pvc.yaml
containers/ikos/: Dockerfile
containers/scar/: Dockerfile  Dockerfile.osscrs-tool.example
docs/: analyzing-patch-failures.md  context-window-management.md  engineering-history.md  experimental-design.md  extending-the-pipeline.md  inspecting-traces.md  osscrs-tool-guide.md  research.md  scar-inspector-pod.yaml  scar-workshop-inspector-pod.yaml  token-efficiency.md  workshop-guide.md
docs/experiments/: ir-embed-aws.md  ir-embed-training.md  ir-embed.md
examples/: grep_scan.py  trace-scar-v1-v2-scar-test-c.tar.xz
experiments/ir_embed_demo/: README.md  run.sh
pipeline/: README.md  pipeline-v1-llm-only.yaml  pipeline-v2-full.yaml  pipeline-v3-extended.yaml  pipeline.yaml  pvc-workshop.yaml  pvc.yaml
pipeline/tasks/: build-bitcode.yaml  cppcheck.yaml  git-clone.yaml  ikos-analyze.yaml  llm-scan.yaml  osscrs-scan.yaml  repair-loop.yaml  scar-report.yaml  scar-stub-custom-scan.yaml  scar-stub-fuzzer.yaml  submit-results.yaml
scar/: __init__.py  __main__.py  context_gen.py  grep_tool.py  ikos_witness.py  llm.py  patch_gen.py  sarif_bridge.py  scan_cmd.py  triage.py  validate_schema.py  validator.py  vuln_scan.py
scripts/: setup-workshop-namespace.sh  setup-workshop-pvc.sh  test-structured-patch.sh
tests/: mock_pipeline.sh  test_grep_tool.py  test_sarif_bridge.py  test_validator.py
(+11 files in other folders)
