[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scar"
version = "0.1.0"
description = "Static C Analysis & Repair — autonomous CVE scanning and patch generation for C codebases"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
scar = "scar.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
